# yaapt

./: .gitignore
desktop/: CMakeLists.txt
desktop/src/: testclass.cpp  testclass.h
embedded/: CMakeLists.txt
embedded/include/: lwipopts.h
embedded/pio_espidf_nanopb/: platformio.ini
embedded/pio_espidf_nanopb/src/: pio_esp32_idf.c  test.h
embedded/send_msg/: compile_commands.json  platformio.ini
embedded/send_msg/lib/yaapt/: library.json
embedded/send_msg/lib/yaapt/include/: yaapt.h  yaapt.pb.h
embedded/send_msg/lib/yaapt/src/: yaapt.c  yaapt.pb.c
embedded/send_msg/src/: main.cpp
embedded/src/: main.c
native/: SerialListener.py
protocol/: yaapt.pb.h  yaapt.proto
protocol/c/: yaapt.pb.c
protocol/cpp/: yaapt.pb.cc  yaapt.pb.h
protocol/generator/proto/: nanopb_pb2.py
protocol/python/: yaapt_pb2.py
